--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-blue-600" id="">
-    <form class="w-full h-auto max-w-lg ml-12 bg-white">
+    <form method="get" class="w-full h-auto max-w-lg ml-12 bg-white">
         <div class="px-12 py-12">
             <div class="flex items-center justify-start ">
                 <div class="flex items-center space-x-4">
