--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     
  
      <!-- businesses track ends  -->
-     <div class="text-center w-full h-[300px] bg-blue-600 flex flex-wrap md:flex-col mt-16 items-center justify-center overflow-hidden">
+     <div class="text-center w-full h-[300px] bg-blue-600 flex flex-wrap flex-col mt-16 items-center justify-center overflow-hidden">
        <div class="w-7/12">
         <h2 class="text-3xl font-bold mb-2">Get started today</h2>
         <p class="mb-3 text-sm">It’s time to take control of your books. Buy our software so you can feel like you’re doing something productive.</p>
