--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <footer class="w-full">
             <div class="px-8 py-16 bg-gray-100">
                 <h2 class="text-3xl font-semibold mb-6 text-center md:text-left ml-16">Frequently Asked Questions</h2>
-                <p class="mb-12 text-center md:text-left ml-16">If you can’t find what you’re looking for, email our support team and if you’re lucky someone will get back to you.</p>
+                <p class="mb-12 text-left md:text-left ml-16">If you can’t find what you’re looking for, email our support team and if you’re lucky someone will get back to you.</p>
                 <div class="flex flex-wrap justify-center gap-1 mb-16">
                     <!-- Column 1 -->
                     <div class="flex flex-col w-full max-w-sm px-4">
