--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 to use. We make the <br />opposite trade-off, and hope you don’t get audited.</p>
 
             <div class="space-x-5 flex flex-col md:flex-row items-center justify-center">
-                <a class="bg-black text-white font-semibold  p-2 rounded-3xl px-4 hover:bg-slate-900" href="">Get 6
+                <a class="bg-black text-white font-semibold ml-6  p-2 rounded-3xl px-4 hover:bg-slate-900" href="">Get 6
                     months free</a>
                 <a class="p-2 px-4 rounded-3xl hover:border-x hover:border-y border-blue-600 " href="">Watch video</a>
             </div>
