--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="space-x-5 flex flex-col md:flex-row items-center justify-center">
                 <a class="bg-black text-white font-semibold ml-6  p-2 rounded-3xl px-4 hover:bg-slate-900" href="">Get 6
                     months free</a>
-                <a class="p-2 px-4 rounded-3xl hover:border-x hover:border-y border-blue-600 " href="">Watch video</a>
+                <a class="p-2 rounded-3xl hover:border-x hover:border-y border-blue-600 mt-3 " href="">Watch video</a>
             </div>
 
             <div class="flex font-semibold items-center justify-center mt-11 ">
