--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 to use. We make the <br />opposite trade-off, and hope you don’t get audited.</p>
 
             <div class="space-x-5 flex flex-col md:flex-row items-center justify-center">
-                <a class="bg-black text-white font-semibold ml-6  p-2 rounded-3xl px-4 hover:bg-slate-900" href="">Get 6
+                <a class="bg-black text-white font-semibold ml-7  p-2 rounded-3xl px-4 hover:bg-slate-900" href="">Get 6
                     months free</a>
                 <a class="p-2 rounded-3xl hover:border-x hover:border-y border-blue-600 mt-3 " href="">Watch video</a>
             </div>
@@ -63,7 +63,7 @@
             </div>
 
             <div class="space-x-9 w-auto flex flex-col md:flex-row items-center justify-center mt-11">
-                <img src="./Project_Resources/transistor.7274e6c3.svg" alt="">
+                <img src="./transistor.7274e6c3.svg" alt="">
                 <img src="./Project_Resources/tuple.74eb0ae0.svg" alt="">
                 <img src="./Project_Resources/statickit.d7937794.svg" alt="">
                 <img src="./Project_Resources/mirage.18d2ec4e.svg" alt="">
