--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
             <div class="space-x-9 w-auto flex flex-col md:flex-row items-center justify-center mt-11">
                 <img src="./transistor.7274e6c3.svg" alt="">
-                <img src="./Project_Resources/tuple.74eb0ae0.svg" alt="">
-                <img src="./Project_Resources/statickit.d7937794.svg" alt="">
-                <img src="./Project_Resources/mirage.18d2ec4e.svg" alt="">
-                <img src="./Project_Resources/laravel.7deed17e.svg" alt="">
-                <img src="./Project_Resources/statamic.6da5ebfb.svg" alt="">
+                <img src="./tuple.74eb0ae0.svg" alt="">
+                <img src="./statickit.d7937794.svg" alt="">
+                <img src="./mirage.18d2ec4e.svg" alt="">
+                <img src="./laravel.7deed17e.svg" alt="">
+                <img src="./statamic.6da5ebfb.svg" alt="">
             </div>
         </div>
     </div>
@@ -76,7 +76,7 @@
     <!-- hero section ends  -->
 
     <!-- main section  -->
-    <div class="flex flex-col md:flex-row h-screen w-full  bg-blue-600" id="features">
+    <div class="flex flex-col md:flex-row h-screen w-full  bg-blue-600" id="features mt-3">
         <div class="md:w-1/2 p-4  overflow-x-auto md:flex md:flex-col flex flex-nowrap  mt-10 px-11">
             <a href="javascript:void(0)" class="block mb-4 mr-4" onclick="updateImage(1)">
                 <strong class="text-nowrap">Payroll</strong>
